[gd_scene load_steps=57 format=3 uid="uid://1xjwovya6ixr"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7qcun"]
[ext_resource type="Texture2D" uid="uid://ch4wxekonpjrt" path="res://assets/sprites/knight.png" id="1_d87gs"]
[ext_resource type="Texture2D" uid="uid://0jvehjbm1oc5" path="res://assets/sprites/knight_v2.png" id="3_n7h4b"]
[ext_resource type="AudioStream" uid="uid://m2ecairurj5o" path="res://assets/sounds/move_stone.wav" id="4_mw8eo"]
[ext_resource type="AudioStream" uid="uid://cjdmwa4kkcavf" path="res://assets/sounds/jump.wav" id="5_jo2wj"]
[ext_resource type="AudioStream" uid="uid://cxlm837w1p1wq" path="res://assets/sounds/Steps.ogg" id="6_3ksnx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sag81"]
atlas = ExtResource("3_n7h4b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur2nv"]
atlas = ExtResource("3_n7h4b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jhnc"]
atlas = ExtResource("3_n7h4b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ans66"]
atlas = ExtResource("3_n7h4b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ep8g"]
atlas = ExtResource("1_d87gs")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayox5"]
atlas = ExtResource("3_n7h4b")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv8bu"]
atlas = ExtResource("1_d87gs")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjba2"]
atlas = ExtResource("1_d87gs")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scx06"]
atlas = ExtResource("1_d87gs")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqkct"]
atlas = ExtResource("1_d87gs")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrjhw"]
atlas = ExtResource("1_d87gs")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43488"]
atlas = ExtResource("1_d87gs")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv7p8"]
atlas = ExtResource("1_d87gs")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ketye"]
atlas = ExtResource("1_d87gs")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whwtv"]
atlas = ExtResource("1_d87gs")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie4k5"]
atlas = ExtResource("1_d87gs")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtqey"]
atlas = ExtResource("1_d87gs")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4wlu"]
atlas = ExtResource("1_d87gs")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl12r"]
atlas = ExtResource("1_d87gs")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvan"]
atlas = ExtResource("1_d87gs")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coysq"]
atlas = ExtResource("1_d87gs")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukoo6"]
atlas = ExtResource("1_d87gs")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vovx"]
atlas = ExtResource("3_n7h4b")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuc70"]
atlas = ExtResource("3_n7h4b")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muqej"]
atlas = ExtResource("3_n7h4b")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m4fb"]
atlas = ExtResource("3_n7h4b")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v42v"]
atlas = ExtResource("3_n7h4b")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1msux"]
atlas = ExtResource("3_n7h4b")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox0xe"]
atlas = ExtResource("3_n7h4b")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6fv0"]
atlas = ExtResource("3_n7h4b")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xxnp"]
atlas = ExtResource("3_n7h4b")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqfvb"]
atlas = ExtResource("3_n7h4b")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uldra"]
atlas = ExtResource("3_n7h4b")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3s5s"]
atlas = ExtResource("3_n7h4b")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2jbn"]
atlas = ExtResource("3_n7h4b")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1abp"]
atlas = ExtResource("3_n7h4b")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cilad"]
atlas = ExtResource("3_n7h4b")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr5us"]
atlas = ExtResource("3_n7h4b")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xv02q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sag81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur2nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jhnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ans66")
}],
"loop": true,
"name": &"idle_v2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ep8g")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayox5")
}],
"loop": true,
"name": &"jump_v2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv8bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjba2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scx06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqkct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrjhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43488")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv7p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ketye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whwtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie4k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtqey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4wlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl12r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coysq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukoo6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vovx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuc70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muqej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m4fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1msux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox0xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6fv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xxnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqfvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uldra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3s5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2jbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1abp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cilad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr5us")
}],
"loop": true,
"name": &"run_v2",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_niqdo"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgo6c"]
size = Vector2(3, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gmb4"]
atlas = ExtResource("3_n7h4b")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oewk2"]
atlas = ExtResource("3_n7h4b")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06750"]
atlas = ExtResource("3_n7h4b")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xsf4"]
atlas = ExtResource("3_n7h4b")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7fr7"]
atlas = ExtResource("3_n7h4b")
region = Rect2(0, 38, 32, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvudr"]
atlas = ExtResource("3_n7h4b")
region = Rect2(32, 38, 32, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuktc"]
atlas = ExtResource("3_n7h4b")
region = Rect2(64, 38, 32, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo74n"]
atlas = ExtResource("3_n7h4b")
region = Rect2(96, 38, 32, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhgg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gmb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oewk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06750")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xsf4")
}],
"loop": true,
"name": &"hands",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7fr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuktc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo74n")
}],
"loop": true,
"name": &"stone",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_7qcun")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xv02q")
animation = &"idle_v2"
autoplay = "idle_v2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_niqdo")

[node name="grab_area" type="Area2D" parent="." groups=["grab_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="grab_area"]
position = Vector2(7, -6)
shape = SubResource("RectangleShape2D_fgo6c")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="stone_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -6)
scale = Vector2(0.6875, 0.618421)
sprite_frames = SubResource("SpriteFrames_mhgg7")
animation = &"hands"
autoplay = "stone"
frame_progress = 0.75819

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mw8eo")
pitch_scale = 0.65
bus = &"SFX"

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jo2wj")
pitch_scale = 0.4
bus = &"char"

[node name="steps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3ksnx")
pitch_scale = 0.13
bus = &"SFX"

[node name="coyote_timer" type="Timer" parent="."]

[connection signal="area_entered" from="grab_area" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="grab_area" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="grab_area" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="grab_area" to="." method="_on_grab_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="coyote_timer" to="." method="coyote_timeout"]
